--- a/src/App.css
+++ b/src/App.css
@@ -7,71 +7,8 @@
   grid-template-columns: 280px 1fr 290px;
   grid-template-areas: 
   "header header header"
-   "nav content navRight";
+  "nav content navRight";
    font-size: 30px;
    margin: 0 auto;
-}
-
-.header {
-  grid-area: header;
-  background-color: aqua;
-}
-
-.header img {
-  width: 20px;
-  height: 20px;
-}
-
-.nav {
-  grid-area: nav;
-  background-color: rgb(24, 230, 41);
-  padding: 0 15px;
-}
-
-.navRight {
-  grid-area: navRight;
-  background-color: rgb(24, 230, 41);
-  padding: 0 15px;
-}
-
-.main-content-wrapper {
-  grid-area: content;
-}
-
-.main-content-wrapper .main-content {
-  background-color: rgb(3, 3, 7);
-  width: 960px;
-  margin: 0 auto;
-  display: flex;
-  gap: 15px;
-}
-
-.news-line {
-  background-color: blue;
-  width: 663px;
-  height: 300px;
-}
-
-.advertising {
-  background-color: bisque;
-  width: 282px;
-  height: 800px;
-}
-
-.block-stories {
-  width: 100%;
-  height: 232px;
-  background-color: yellow;
-}
-
-.new-post {
-  width: 100%;
-  height: 245px;
-  background-color: rgb(25, 0, 255);
-}
-
-.block-post {
-  width: 100%;
-  height: 400px;
-  background-color: rgb(255, 0, 0);
+    background-color: #57ff6d;
 }
