--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -1,5 +1,26 @@
 .nav {
-  grid-area: nav;
-  background-color: rgb(24, 230, 41);
-  padding: 0 15px;
+    grid-area: nav;
+    background-color: #fff;
+    border-radius: 5px;
+    margin-left: 15px;
+    font-size: 25px;
+    font-weight: 500;
+    height: 500px;
+    box-shadow: 0 8px 30px rgba(0, 0, 0, .05)
+}
+
+.nav a {
+    display: block;
+    width: 100%;
+    padding: 10px;
+}
+
+.nav a:hover {
+    background-color: #d9d9d9;
+    border-radius: 5px;
+    color: #222222;
+}
+
+.active {
+    color: #222222;
 }
