--- a/src/components/NavBarRight/NavBarRight.module.css
+++ b/src/components/NavBarRight/NavBarRight.module.css
@@ -1,5 +1,9 @@
 .nav {
-  grid-area: navRight;
-  background-color: rgb(24, 230, 41);
-  padding: 0 15px;
+    grid-area: navRight;
+    background-color: #fff;
+    padding: 0 15px;
+    border-radius: 5px;
+    margin-right: 15px;
+    height: 500px;
+    box-shadow: 0 8px 30px rgba(0, 0, 0, .05)
 }
