--- a/src/components/Profile/Newsline/Newsline.module.css
+++ b/src/components/Profile/Newsline/Newsline.module.css
@@ -1,5 +1,6 @@
 .newsLine {
-    background-color: blue;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
     width: 663px;
-    height: 300px;
-  }
+}
