--- a/src/components/OnlineBar/OnlineBar.module.css
+++ b/src/components/OnlineBar/OnlineBar.module.css
@@ -1,5 +1,5 @@
 .nav {
-    grid-area: navRight;
+    grid-area: onlineBar;
     background-color: #fff;
     padding: 0 15px;
     border-radius: 5px;
