--- a/src/components/Profile/Newsline/NewPost/NewPost.module.css
+++ b/src/components/Profile/Newsline/NewPost/NewPost.module.css
@@ -1,5 +1,88 @@
 .newPost {
     width: 100%;
-    height: 245px;
-    background-color: rgb(25, 0, 255);
-  }
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 8px 30px rgba(0, 0, 0, .05);
+    padding: 25px;
+    display: flex;
+    flex-direction: column;
+}
+
+.previewText {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.favicon {
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    background-color: #f5f5f5;
+    background-image: url(https://cdn.onlinewebfonts.com/svg/download_194863.png);
+    background-position: center center;
+    background-size: 16px;
+    background-repeat: no-repeat;
+}
+
+.text {
+    font-size: 13px;
+    font-weight: 700;
+    color: #adb5bd;
+}
+
+.textInputBlock {
+    display: flex;
+    border: 2px solid #e5e5e5;
+    border-radius: 15px;
+    padding: 10px;
+    margin-top: 15px;
+}
+
+.textInputBlock img {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+}
+
+.textInputBlock textarea {
+    outline: none;
+    border: none;
+    resize: none;
+    flex-basis: 100%;
+    font-size: 14px;
+    color: #222222;
+    margin-left: 10px;
+    margin-top: 4px;
+    height: 80px;
+    font-weight: 500;
+}
+
+.addFile {
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    background-position: center center;
+    background-size: 20px;
+    background-repeat: no-repeat;
+    background-image: url(https://perm.bintaga.ru/local/templates/bintaga/includes/ChatBot/img/paper-clip.svg);
+    cursor: pointer;
+    opacity: 0.5;
+}
+
+.addFile:hover {
+    background-color: #efefef;
+}
+
+.newPost input {
+    background-color: #f5f5f5;
+    border: 1px solid #c3c9cc;
+    border-radius: 10px;
+    width: 100px;
+    height: 30px;
+    align-self: flex-end;
+    margin-top: 10px;
+    margin-right: 10px;
+    color: #222222;
+    cursor: pointer;
+}
