--- a/src/components/Profile/Newsline/Posts/Posts.module.css
+++ b/src/components/Profile/Newsline/Posts/Posts.module.css
@@ -1,5 +1,8 @@
 .blockPost {
     width: 100%;
-    height: 400px;
-    background-color: rgb(255, 0, 0);
-  }
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 8px 30px rgba(0, 0, 0, .05);
+    grid-area: posts;
+    padding: 20px;
+}
