Added login page and redux-form library

--- a/src/components/Profile/Newsline/NewPost/NewPost.module.css
+++ b/src/components/Profile/Newsline/NewPost/NewPost.module.css
@@ -74,7 +74,7 @@
     background-color: #efefef;
 }
 
-.newPost input {
+.newPost button {
     background-color: #f5f5f5;
     border: 1px solid #c3c9cc;
     border-radius: 10px;
