--- a/src/components/Profile/ProfileBlock/ProfileBlock.module.css
+++ b/src/components/Profile/ProfileBlock/ProfileBlock.module.css
@@ -37,8 +37,7 @@
 }
 
 .userName {
-    align-self: flex-end;
-    margin-bottom: 10px;
+    margin-top: 40px;
 }
 
 .name {
@@ -53,4 +52,5 @@
     color: #adb5bd;
     font-family: Montserrat, sans-serif;
     font-weight: 500;
+    margin-bottom: 4px;
 }
